src/objects/gst_pdb_trip_day_dtl_bidl__x.object
<CustomObject>
    <description>caesars$gst_pdb_trip_day_dtl_bidl</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$gst_pdb_trip_day_dtl_bidl</externalName>
    <fields>
        <fullName>c_division_desc__c</fullName>
        <description>c_division_desc</description>
        <externalDeveloperName>c_division_desc</externalDeveloperName>
        <label>c_division_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_market_cd__c</fullName>
        <description>c_market_cd</description>
        <externalDeveloperName>c_market_cd</externalDeveloperName>
        <label>c_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_market_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_market_cd_fk</description>
        <externalDeveloperName>c_market_cd_fk</externalDeveloperName>
        <label>c_market_cd_fk</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Gst pdb trip day dtl bidl</relationshipLabel>
        <relationshipName>Gst_pdb_trip_day_dtl_bidl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>c_prop_cd_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gst pdb trip day dtl bidl</relationshipLabel>
        <relationshipName>Gst_pdb_trip_day_dtl_bidl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_market_cd_fk</description>
        <externalDeveloperName>c_prop_market_cd_fk</externalDeveloperName>
        <label>c_prop_market_cd_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gst pdb trip day dtl bidl (c_prop_market_cd_fk)</relationshipLabel>
        <relationshipName>Gst_pdb_trip_day_dtl_bidl1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gst pdb trip day dtl bidl</relationshipLabel>
        <relationshipName>Gst_pdb_trip_day_dtl_bidl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_date__c</fullName>
        <description>d_date</description>
        <externalDeveloperName>d_date</externalDeveloperName>
        <label>d_date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt_pdb_trip__c</fullName>
        <description>d_end_dt_pdb_trip</description>
        <externalDeveloperName>d_end_dt_pdb_trip</externalDeveloperName>
        <label>d_end_dt_pdb_trip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_start_dt_pdb_trip__c</fullName>
        <description>d_start_dt_pdb_trip</description>
        <externalDeveloperName>d_start_dt_pdb_trip</externalDeveloperName>
        <label>d_start_dt_pdb_trip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_act_all__c</fullName>
        <description>f_act_all</description>
        <externalDeveloperName>f_act_all</externalDeveloperName>
        <label>f_act_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_game__c</fullName>
        <description>f_act_game</description>
        <externalDeveloperName>f_act_game</externalDeveloperName>
        <label>f_act_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_other__c</fullName>
        <description>f_act_other</description>
        <externalDeveloperName>f_act_other</externalDeveloperName>
        <label>f_act_other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_slot__c</fullName>
        <description>f_act_slot</description>
        <externalDeveloperName>f_act_slot</externalDeveloperName>
        <label>f_act_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_profit_amt__c</fullName>
        <description>f_actual_profit_amt</description>
        <externalDeveloperName>f_actual_profit_amt</externalDeveloperName>
        <label>f_actual_profit_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avg_profit_amt__c</fullName>
        <description>f_avg_profit_amt</description>
        <externalDeveloperName>f_avg_profit_amt</externalDeveloperName>
        <label>f_avg_profit_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_marker_game__c</fullName>
        <description>f_cash_marker_game</description>
        <externalDeveloperName>f_cash_marker_game</externalDeveloperName>
        <label>f_cash_marker_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_marker_other__c</fullName>
        <description>f_cash_marker_other</description>
        <externalDeveloperName>f_cash_marker_other</externalDeveloperName>
        <label>f_cash_marker_other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_rev_amt__c</fullName>
        <description>f_cash_rev_amt</description>
        <externalDeveloperName>f_cash_rev_amt</externalDeveloperName>
        <label>f_cash_rev_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_tt_amt__c</fullName>
        <description>f_cash_tt_amt</description>
        <externalDeveloperName>f_cash_tt_amt</externalDeveloperName>
        <label>f_cash_tt_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_coinin_slot__c</fullName>
        <description>f_coinin_slot</description>
        <externalDeveloperName>f_coinin_slot</externalDeveloperName>
        <label>f_coinin_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_rev_amt__c</fullName>
        <description>f_comp_rev_amt</description>
        <externalDeveloperName>f_comp_rev_amt</externalDeveloperName>
        <label>f_comp_rev_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_tt_amt__c</fullName>
        <description>f_comp_tt_amt</description>
        <externalDeveloperName>f_comp_tt_amt</externalDeveloperName>
        <label>f_comp_tt_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_dec_food_used__c</fullName>
        <description>f_cw_dlrs_dec_food_used</description>
        <externalDeveloperName>f_cw_dlrs_dec_food_used</externalDeveloperName>
        <label>f_cw_dlrs_dec_food_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_dec_other_used__c</fullName>
        <description>f_cw_dlrs_dec_other_used</description>
        <externalDeveloperName>f_cw_dlrs_dec_other_used</externalDeveloperName>
        <label>f_cw_dlrs_dec_other_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_dec_room_used__c</fullName>
        <description>f_cw_dlrs_dec_room_used</description>
        <externalDeveloperName>f_cw_dlrs_dec_room_used</externalDeveloperName>
        <label>f_cw_dlrs_dec_room_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_dec_trans_used__c</fullName>
        <description>f_cw_dlrs_dec_trans_used</description>
        <externalDeveloperName>f_cw_dlrs_dec_trans_used</externalDeveloperName>
        <label>f_cw_dlrs_dec_trans_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_dec_used__c</fullName>
        <description>f_cw_dlrs_dec_used</description>
        <externalDeveloperName>f_cw_dlrs_dec_used</externalDeveloperName>
        <label>f_cw_dlrs_dec_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_food_used__c</fullName>
        <description>f_cw_dlrs_food_used</description>
        <externalDeveloperName>f_cw_dlrs_food_used</externalDeveloperName>
        <label>f_cw_dlrs_food_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_nondec_food_used__c</fullName>
        <description>f_cw_dlrs_nondec_food_used</description>
        <externalDeveloperName>f_cw_dlrs_nondec_food_used</externalDeveloperName>
        <label>f_cw_dlrs_nondec_food_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_nondec_other_used__c</fullName>
        <description>f_cw_dlrs_nondec_other_used</description>
        <externalDeveloperName>f_cw_dlrs_nondec_other_used</externalDeveloperName>
        <label>f_cw_dlrs_nondec_other_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_nondec_room_used__c</fullName>
        <description>f_cw_dlrs_nondec_room_used</description>
        <externalDeveloperName>f_cw_dlrs_nondec_room_used</externalDeveloperName>
        <label>f_cw_dlrs_nondec_room_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_nondec_trans_used__c</fullName>
        <description>f_cw_dlrs_nondec_trans_used</description>
        <externalDeveloperName>f_cw_dlrs_nondec_trans_used</externalDeveloperName>
        <label>f_cw_dlrs_nondec_trans_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_nondec_used__c</fullName>
        <description>f_cw_dlrs_nondec_used</description>
        <externalDeveloperName>f_cw_dlrs_nondec_used</externalDeveloperName>
        <label>f_cw_dlrs_nondec_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_other_used__c</fullName>
        <description>f_cw_dlrs_other_used</description>
        <externalDeveloperName>f_cw_dlrs_other_used</externalDeveloperName>
        <label>f_cw_dlrs_other_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_room_used__c</fullName>
        <description>f_cw_dlrs_room_used</description>
        <externalDeveloperName>f_cw_dlrs_room_used</externalDeveloperName>
        <label>f_cw_dlrs_room_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_trans_used__c</fullName>
        <description>f_cw_dlrs_trans_used</description>
        <externalDeveloperName>f_cw_dlrs_trans_used</externalDeveloperName>
        <label>f_cw_dlrs_trans_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cw_dlrs_used__c</fullName>
        <description>f_cw_dlrs_used</description>
        <externalDeveloperName>f_cw_dlrs_used</externalDeveloperName>
        <label>f_cw_dlrs_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_food_used__c</fullName>
        <description>f_rc_dlrs_food_used</description>
        <externalDeveloperName>f_rc_dlrs_food_used</externalDeveloperName>
        <label>f_rc_dlrs_food_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_other_used__c</fullName>
        <description>f_rc_dlrs_other_used</description>
        <externalDeveloperName>f_rc_dlrs_other_used</externalDeveloperName>
        <label>f_rc_dlrs_other_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_room_used__c</fullName>
        <description>f_rc_dlrs_room_used</description>
        <externalDeveloperName>f_rc_dlrs_room_used</externalDeveloperName>
        <label>f_rc_dlrs_room_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_trans_used__c</fullName>
        <description>f_rc_dlrs_trans_used</description>
        <externalDeveloperName>f_rc_dlrs_trans_used</externalDeveloperName>
        <label>f_rc_dlrs_trans_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_dlrs_used__c</fullName>
        <description>f_rc_dlrs_used</description>
        <externalDeveloperName>f_rc_dlrs_used</externalDeveloperName>
        <label>f_rc_dlrs_used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all__c</fullName>
        <description>f_theo_all</description>
        <externalDeveloperName>f_theo_all</externalDeveloperName>
        <label>f_theo_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_game__c</fullName>
        <description>f_theo_game</description>
        <externalDeveloperName>f_theo_game</externalDeveloperName>
        <label>f_theo_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_other__c</fullName>
        <description>f_theo_other</description>
        <externalDeveloperName>f_theo_other</externalDeveloperName>
        <label>f_theo_other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot__c</fullName>
        <description>f_theo_slot</description>
        <externalDeveloperName>f_theo_slot</externalDeveloperName>
        <label>f_theo_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_cms_comps__c</fullName>
        <description>f_total_cms_comps</description>
        <externalDeveloperName>f_total_cms_comps</externalDeveloperName>
        <label>f_total_cms_comps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cash_cost__c</fullName>
        <description>i_cash_cost</description>
        <externalDeveloperName>i_cash_cost</externalDeveloperName>
        <label>i_cash_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cash_coupons__c</fullName>
        <description>i_cash_coupons</description>
        <externalDeveloperName>i_cash_coupons</externalDeveloperName>
        <label>i_cash_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_comp_tickets__c</fullName>
        <description>i_comp_tickets</description>
        <externalDeveloperName>i_comp_tickets</externalDeveloperName>
        <label>i_comp_tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_division_sort__c</fullName>
        <description>i_division_sort</description>
        <externalDeveloperName>i_division_sort</externalDeveloperName>
        <label>i_division_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_event_cost__c</fullName>
        <description>i_event_cost</description>
        <externalDeveloperName>i_event_cost</externalDeveloperName>
        <label>i_event_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_event_coupons__c</fullName>
        <description>i_event_coupons</description>
        <externalDeveloperName>i_event_coupons</externalDeveloperName>
        <label>i_event_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_fb_cost__c</fullName>
        <description>i_fb_cost</description>
        <externalDeveloperName>i_fb_cost</externalDeveloperName>
        <label>i_fb_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_fb_coupons__c</fullName>
        <description>i_fb_coupons</description>
        <externalDeveloperName>i_fb_coupons</externalDeveloperName>
        <label>i_fb_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_hotel_cost__c</fullName>
        <description>i_hotel_cost</description>
        <externalDeveloperName>i_hotel_cost</externalDeveloperName>
        <label>i_hotel_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_hotel_coupons__c</fullName>
        <description>i_hotel_coupons</description>
        <externalDeveloperName>i_hotel_coupons</externalDeveloperName>
        <label>i_hotel_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_all__c</fullName>
        <description>i_lop_all</description>
        <externalDeveloperName>i_lop_all</externalDeveloperName>
        <label>i_lop_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game__c</fullName>
        <description>i_lop_game</description>
        <externalDeveloperName>i_lop_game</externalDeveloperName>
        <label>i_lop_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_other__c</fullName>
        <description>i_lop_other</description>
        <externalDeveloperName>i_lop_other</externalDeveloperName>
        <label>i_lop_other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_slot__c</fullName>
        <description>i_lop_slot</description>
        <externalDeveloperName>i_lop_slot</externalDeveloperName>
        <label>i_lop_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_merchandise_cost__c</fullName>
        <description>i_merchandise_cost</description>
        <externalDeveloperName>i_merchandise_cost</externalDeveloperName>
        <label>i_merchandise_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_merchandise_coupons__c</fullName>
        <description>i_merchandise_coupons</description>
        <externalDeveloperName>i_merchandise_coupons</externalDeveloperName>
        <label>i_merchandise_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_other_cost__c</fullName>
        <description>i_other_cost</description>
        <externalDeveloperName>i_other_cost</externalDeveloperName>
        <label>i_other_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_other_coupons__c</fullName>
        <description>i_other_coupons</description>
        <externalDeveloperName>i_other_coupons</externalDeveloperName>
        <label>i_other_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pdb_trip_id__c</fullName>
        <description>i_pdb_trip_id</description>
        <externalDeveloperName>i_pdb_trip_id</externalDeveloperName>
        <label>i_pdb_trip_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_promo_rc_cost__c</fullName>
        <description>i_promo_rc_cost</description>
        <externalDeveloperName>i_promo_rc_cost</externalDeveloperName>
        <label>i_promo_rc_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_promo_rc_coupons__c</fullName>
        <description>i_promo_rc_coupons</description>
        <externalDeveloperName>i_promo_rc_coupons</externalDeveloperName>
        <label>i_promo_rc_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_sort__c</fullName>
        <description>i_prop_sort</description>
        <externalDeveloperName>i_prop_sort</externalDeveloperName>
        <label>i_prop_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rrerr_cash_cost__c</fullName>
        <description>i_rrerr_cash_cost</description>
        <externalDeveloperName>i_rrerr_cash_cost</externalDeveloperName>
        <label>i_rrerr_cash_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rrerr_cash_coupons__c</fullName>
        <description>i_rrerr_cash_coupons</description>
        <externalDeveloperName>i_rrerr_cash_coupons</externalDeveloperName>
        <label>i_rrerr_cash_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_tot_cost__c</fullName>
        <description>i_tot_cost</description>
        <externalDeveloperName>i_tot_cost</externalDeveloperName>
        <label>i_tot_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_tot_coupons__c</fullName>
        <description>i_tot_coupons</description>
        <externalDeveloperName>i_tot_coupons</externalDeveloperName>
        <label>i_tot_coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gst pdb trip day dtl bidl</label>
    <pluralLabel>Gst pdb trip day dtl bidl</pluralLabel>
</CustomObject>